[gd_scene load_steps=2 format=3 uid="uid://ooltk1hg87y"]

[ext_resource type="Script" path="res://MENU_SYSTEM/new_game.gd" id="1_iiuq3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iiuq3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Import" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Import from file"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="WorldNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "World Name:"

[node name="WorldName" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "World name"

[node name="DifficultyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Difficulty: Noob"

[node name="Difficulty" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 3.0
rounded = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Go back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Difficulty" to="." method="_on_difficulty_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
